# Rollout

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py
rollout/: __init__.py  __main__.py  commands.py  common.py  custom_types.py  initialise_git.py  new_project.py  start_project.py
src/: commands.py  main.py  new_project.py  start_project.py  template.jinja2  template.py
